# dtreg_py

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: coverage.yml  publish.yml
dtreg/: extract_epic.py  request_epic.py
dtreg/templates/: empty_schema.json  stat_test_diff.json
src/dtreg/: dtr_interface.py  extract_epic.py  extract_orkg.py  from_static.py  helpers.py  load_datatype.py  load_objects.py  request_dtr.py  request_epic.py  to_jsonld.py
src/dtreg/data/: ePIC-21-T11909-286991b26f02d58ee490.json  ePIC-21-T11909-37182ecfb4474942e255.json  ePIC-21-T11909-3f64a93eef69d721518f.json  ePIC-21-T11909-437807f8d1a81b5138a3.json  ePIC-21-T11909-5b66cb584b974b186f37.json  ePIC-21-T11909-5e782e67e70d0b2a022a.json  ePIC-21-T11909-6e3e29ce3ba5a0b9abfe.json  ePIC-21-T11909-abef9f1c0d48853f3e51.json  ePIC-21-T11909-b9335ce2c99ed87735a6.json  ePIC-21-T11909-c6b413ba96ba477b5dca.json  ePIC-21-T11909-c6e19df3b52ab8d855a9.json  ePIC-21-T11909-feeb33ad3e4440682a4d.json  ePIC-21-T11969-0424f6e7026fa4bc2c4a.json  ePIC-21-T11969-1ea0e148d9bbe08335cd.json  ePIC-21-T11969-1f4df47aacf6562bc07b.json  ePIC-21-T11969-3df63b7acb0522da685d.json  ePIC-21-T11969-4607bc7c42ac8db29bfc.json  ePIC-21-T11969-4b99260369df9110f9bd.json  ePIC-21-T11969-540c1a27569dc7ce906b.json  ePIC-21-T11969-65ba00e95e60fb8971e6.json  ePIC-21-T11969-74bc7748b8cd520908bc.json  ePIC-21-T11969-9445db970678d3b0c7ec.json  ePIC-21-T11969-9bf7a8e8909bfd491b38.json  ePIC-21-T11969-a002397ab31c7535f1be.json  ePIC-21-T11969-abef9f1c0d48853f3e51.json  ePIC-21-T11969-af3a26d0e0b9e2fdc05c.json  ePIC-21-T11969-aff130c76e68ead3862e.json  ePIC-21-T11969-b95ff265a13137c31655.json  ePIC-21-T11969-c981d125d1a564c9f573.json  ePIC-21-T11969-e0efc41346cda4ba84ca.json  ePIC-21-T11969-fb2e379f820c6f8f9e82.json  ePIC-21-T11969-ff5e3f857788d20dd1aa.json  schema_dtreg.json
tests/: dtr_interface_tests.py  extract_epic_tests.py  extract_orkg_tests.py  from_static_tests.py  helpers_tests.py  load_datatype_tests.py  load_objects_tests.py  request_dtr_tests.py  request_epic_tests.py  to_jsonld_tests.py
tests/helpers_mock/: mocking.py
